# flask-todo-pwa

./: .gitignore  README.md  pyproject.toml
flaskdemo/: __init__.py
flaskdemo/controllers/: home_page.py
flaskdemo/models/: Base.py  Todo.py
flaskdemo/views/static/: style.css
flaskdemo/views/templates/: edit_todo.html  index.html
